--- a/src/App.scss
+++ b/src/App.scss
@@ -1,38 +1,31 @@
 .App {
   text-align: center;
+  padding: 0.1rem 0.6rem;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.badge {
+  border: 1px solid rgb(224, 220, 220);
+  border-radius: 7px;
+  padding: 3px 6px;
+  margin: 3px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+
+img {
+  height: 3rem;
+  width: 6rem;
+  border-radius: 3px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+input {
+  width: 100%;
+  height: 3rem;
+  text-indent: 2rem;
+  font-size: larger;
+  border: 3px solid rgb(32, 31, 31);
+  border-radius: 6px;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+td {
+  border-bottom: 1px solid rgb(224, 220, 220);
 }
